# solana-examples

./: .gitignore  README.md  dict.dic  questions_ru.txt
01__state/: Makefile  README.md  README.txt
01__state/client/: package-lock.json  package.json
01__state/client/src/: app.ts  main.ts  serialization.ts
01__state/localnet/: admin.json  user.json
01__state/program/: Cargo.toml
01__state/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
01__state/program/tests/: functional.rs  lib.rs
02__transfer-lamports/: .gitignore  Makefile  README.md  dict.dic
02__transfer-lamports/client/browser/: .gitignore  index.html  main.ts  package.json  (+1 more)
02__transfer-lamports/keys/: alice.json
02__transfer-lamports/program/: Cargo.toml  rustfmt.toml
03__transfer-tokens/: Makefile  README.md
03__transfer-tokens/client/: main.ts  package-lock.json  package.json  tsconfig.json
03__transfer-tokens/localnet/: .gitignore  carol.json  program.json
03__transfer-tokens/program/: Cargo.toml
state/: README.md  justfile
state/client/: package-lock.json  package.json  tsconfig.json
state/localnet/: program.json
state/program/: Cargo.toml
state/program/src/: error.rs  instruction.rs  lib.rs
state/program/tests/: functional.rs
transfer-lamports/: README.md  justfile
transfer-lamports/localnet/: bob.json
transfer-lamports/program/: Cargo.toml
transfer-tokens/: README.md  justfile
transfer-tokens/client/: main.ts  package-lock.json  package.json
transfer-tokens/localnet/: token.json
transfer-tokens/program/: Cargo.toml
(+17 files in other folders)
